# cookiecutter-django

./: .gitignore  Jenkinsfile  README.md  cookiecutter.json  manage.py  pyproject.toml  setup.cfg
apps/users/: admin.py  models.py  views.py
config/: celery.py  urls.py  wsgi.py
config/settings/: base.py  local.py  server.py
deploy/: .env.example  build_config.py  gunicorn.py  project.conf
deploy/nginx/: nginx.conf  project.conf
deploy/nginx/partials/: security_headers.conf  ssl_cert.conf
hooks/: post_gen_project.py
shared/: __init__.py  fields.py
{{cookiecutter.project_slug}}/: .gitignore  env.example  fabfile.py  manage.py  requirements.txt
{{cookiecutter.project_slug}}/app/: manage.py
{{cookiecutter.project_slug}}/app/templates/: 403.html  base.html
{{cookiecutter.project_slug}}/app/{{cookiecutter.project_slug}}/: celery.py  urls.py
{{cookiecutter.project_slug}}/compose/nginx/: start.sh
{{cookiecutter.project_slug}}/deployment/: README.md  default  env.example  gunicorn.conf.py  nginx.conf  project_name.conf  {{ cookiecutter.project_slug }}.conf
{{cookiecutter.project_slug}}/users/migrations/: 0001_initial.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: celery.py  urls.py  wsgi.py
{{cookiecutter.project_slug}}_project/: fabfile.py
{{cookiecutter.project_slug}}_project/deployment/: README.md  env.example  gunicorn.conf.py  {{ cookiecutter.project_slug }}.conf
{{cookiecutter.project_slug}}_project/{{cookiecutter.project_slug}}/: .gitignore  manage.py  requirements.txt
(+24 files in other folders)
